fix align

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12184,6 +12184,8 @@ body {
     @media (max-width: 991.98px) {
       .slogan-position{
         padding: 10% !important;
+        display: flex; 
+        justify-content: center;
       }
       .click-away{
         padding: 10px;
@@ -12885,6 +12887,8 @@ body {
   position: absolute;
   top:28%;
   left: 6%;
+  align-self: center;
+  margin: auto;
 }
 
 
